# ContrastLens

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
contrastlens/: __init__.py  __main__.py  config.py  processor.py  ui.py
tests/: test_processor.py
